--- a/app/views/popos/_form.html.erb
+++ b/app/views/popos/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@popo) do |f| %>
+<%= form_for @popo, :html => {:class => "form-horizontal"} do |f| %>
   <% if @popo.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@popo.errors.count, "error") %> prohibited this popo from being saved:</h2>
@@ -10,6 +10,27 @@
       </ul>
     </div>
   <% end %>
+
+  <%= render 'edit_item_text', :title => "Name", :key => :name, :fields => f %>
+  <%= render 'edit_item_text', :title => "Description", :key => :description, :fields => f %>
+  <%= render 'edit_item_text', :title => "Address", :key => :address, :fields => f %>
+  <%= render 'edit_item_text', :title => "Latitude", :key => :latitude, :fields => f %>
+  <%= render 'edit_item_text', :title => "Longitude", :key => :longitude, :fields => f %>
+  <%= render 'edit_item_text', :title => "Type", :key => :type, :fields => f %>
+  <%= render 'edit_item_text', :title => "Year Built", :key => :year_built, :fields => f %>
+  <%= render 'edit_item_text', :title => "Directions", :key => :directions, :fields => f %>
+  <%= render 'edit_item_text', :title => "Open Times", :key => :open_times, :fields => f %>
+  <%= render 'edit_item_text', :title => "Rating", :key => :rating, :fields => f %>
+  <%= render 'edit_item_text', :title => "4Sq ID", :key => :foursquareid, :fields => f %>
+  <%= render 'edit_item_text', :title => "Spur ID", :key => :spurid, :fields => f %>
+  <%= render 'edit_item_text', :title => "Transportation", :key => :transportation, :fields => f %>
+  <%= render 'edit_item_text', :title => "Twitter \#tag", :key => :twitter_hash_tag, :fields => f %>
+  <%= render 'edit_item_boolean', :title => "Food", :key => :food, :fields => f %>
+  <%= render 'edit_item_boolean', :title => "Seating", :key => :seating, :fields => f %>
+  <%= render 'edit_item_boolean', :title => "Restroom", :key => :restroom, :fields => f %>
+  <%= render 'edit_item_boolean', :title => "Wifi", :key => :wifi, :fields => f %>
+  <%= render 'edit_item_boolean', :title => "Indoors", :key => :indoor, :fields => f %>
+  <%= render 'edit_item_boolean', :title => "Tables", :key => :tables, :fields => f %>
 
   <div class="actions">
     <%= f.submit %>
