--- a/app/views/popos/index.html.erb
+++ b/app/views/popos/index.html.erb
@@ -1,17 +1,23 @@
 <h1>Listing popos</h1>
 
-<table>
+<table class="table table-hover">
   <tr>
-    <th></th>
-    <th></th>
+    <th>Name</th>
+    <th>Address</th>
+    <th>Type</th>
+    <th>Open Time</th>
     <th></th>
   </tr>
 
 <% @popos.each do |popo| %>
   <tr>
-    <td><%= link_to 'Show', popo %></td>
-    <td><%= link_to 'Edit', edit_popo_path(popo) %></td>
-    <td><%= link_to 'Destroy', popo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= popo.name %></td>
+    <td><%= popo.description %></td>
+    <td><%= popo.type %></td>
+    <td><%= popo.open_times %></td>
+    <td><%= link_to 'Show', popo %> |
+    <%= link_to 'Edit', edit_popo_path(popo) %>
+    </td>
   </tr>
 <% end %>
 </table>
