--- a/app/views/popos/_form.html.erb
+++ b/app/views/popos/_form.html.erb
@@ -17,6 +17,7 @@
   <%= render 'edit_item_text', :title => "Latitude", :key => :latitude, :fields => f %>
   <%= render 'edit_item_text', :title => "Longitude", :key => :longitude, :fields => f %>
   <%= render 'edit_item_text', :title => "Type", :key => :type, :fields => f %>
+  <%= render 'edit_item_text', :title => "Pic 1", :key => :pic_1, :fields => f %>
   <%= render 'edit_item_text', :title => "Year Built", :key => :year_built, :fields => f %>
   <%= render 'edit_item_text', :title => "Directions", :key => :directions, :fields => f %>
   <%= render 'edit_item_text', :title => "Open Times", :key => :open_times, :fields => f %>
