--- a/app/views/popos/_form.html.erb
+++ b/app/views/popos/_form.html.erb
@@ -22,10 +22,16 @@
   <%= render 'edit_item_text', :title => "Directions", :key => :directions, :fields => f %>
   <%= render 'edit_item_text', :title => "Open Times", :key => :open_times, :fields => f %>
   <%= render 'edit_item_text', :title => "Rating", :key => :rating, :fields => f %>
+  <%= render 'edit_item_text', :title => "Spur Rating", :key => :spur_rating, :fields => f %>
+  <%= render 'edit_item_text', :title => "Downtown Plan", :key => :downtown_plan, :fields => f %>
+  <%= render 'edit_item_text', :title => "Food notes", :key => :rating, :fields => f %>
+  <%= render 'edit_item_text', :title => "Restroom Notes", :key => :food_notes, :fields => f %>
+  <%= render 'edit_item_text', :title => "Seating Notes", :key => :seating_notes, :fields => f %>
   <%= render 'edit_item_text', :title => "4Sq ID", :key => :foursquareid, :fields => f %>
   <%= render 'edit_item_text', :title => "Spur ID", :key => :spurid, :fields => f %>
   <%= render 'edit_item_text', :title => "Transportation", :key => :transportation, :fields => f %>
   <%= render 'edit_item_text', :title => "Twitter \#tag", :key => :twitter_hash_tag, :fields => f %>
+  <%= render 'edit_item_text', :title => "Notes", :key => :notes, :fields => f %>
   <%= render 'edit_item_boolean', :title => "Food", :key => :food, :fields => f %>
   <%= render 'edit_item_boolean', :title => "Seating", :key => :seating, :fields => f %>
   <%= render 'edit_item_boolean', :title => "Restroom", :key => :restroom, :fields => f %>
