--- a/app/views/popos/show.html.erb
+++ b/app/views/popos/show.html.erb
@@ -17,10 +17,16 @@
   <%= render 'show_item', :title => "Directions", :content => @popo.directions %>
   <%= render 'show_item', :title => "Open Times", :content => @popo.open_times %>
   <%= render 'show_item', :title => "Rating", :content => @popo.rating %>
+  <%= render 'show_item', :title => "Spur Rating", :content => @popo.spur_rating %>
+  <%= render 'show_item', :title => "Food notes", :content => @popo.food_notes %>
+  <%= render 'show_item', :title => "Restroom notes", :content => @popo.restroom_notes %>
+  <%= render 'show_item', :title => "Seating notes", :content => @popo.seating_notes %>
   <%= render 'show_item', :title => "4Sq ID", :content => @popo.foursquareid %>
   <%= render 'show_item', :title => "Spur ID", :content => @popo.spurid %>
   <%= render 'show_item', :title => "Transportation", :content => @popo.transportation %>
   <%= render 'show_item', :title => "Twitter \#tag", :content => @popo.twitter_hash_tag %>
+  <%= render 'show_item', :title => "Notes", :content => @popo.notes %>
+  <%= render 'show_item', :title => "Downtown plan", :content => @popo.downtown_plan %>
   <%= render 'show_item', :title => "Food", :content => @popo.food ? 'Y' : 'N' %>
   <%= render 'show_item', :title => "Seating", :content => @popo.seating ? 'Y' : 'N' %>
   <%= render 'show_item', :title => "Restroom", :content => @popo.restroom ? 'Y' : 'N' %>
