--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,6 +87,10 @@ img, embed, object, video {
 	width: 100%;
 	height: auto;
 }
+.headerlogo {
+	
+	width: 135% !important;
+}
 video {
 	width: 100% !important;
 	height: auto !important;
