POPOS form changes

--- a/app/views/popos/_form.html.erb
+++ b/app/views/popos/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <%= render 'edit_item_text', :title => "Name",        :key => :name,        :fields => f %>
-  <%= render 'edit_item_text', :title => "Description", :key => :description, :fields => f %>
+  <%= render 'edit_item_textarea', :title => "Description", :key => :description, :fields => f %>
   <%= render 'edit_item_text', :title => "Address",     :key => :address,     :fields => f %>
   <%= render 'edit_item_text', :title => "Latitude",    :key => :latitude,    :fields => f %>
   <%= render 'edit_item_text', :title => "Longitude",   :key => :longitude,   :fields => f %>
