--- a/public/css/popos.css
+++ b/public/css/popos.css
@@ -5,9 +5,6 @@
     top: 0;
     width: 100%;
     z-index: 9998;
-    background-color: black;
-    opacity: 0.15;
-    z-index: -1;
 }
 
 #construction {
@@ -17,16 +14,23 @@
     width: 100%;
     z-index: 9999;
     font-size: 3em;
-    color: white;
-    top: 100px;
-    z-index: -1;
+    color: black;
+    top: 90px;
+}
+
+#construction div {
+  height: 30px;
+  margin: 0 auto;
+  padding: 10px;
+  width: 320px;
+  background-color: rgba(255,255,255, 0.75);
+  left: 50px;
 }
 
 .da-slider {
-  top: 200px;
   background: url('/map_bg.png') no-repeat;
   opacity: 50%;
-  top: 10px;
+  top: 17px;
 }
 
 .da-slider .slide-content {
@@ -40,4 +44,19 @@
   padding: 25px;
   top: 290px;
   width: 380px;
+}
+
+#news {
+  left: 20px;
+  top: 20px;
+}
+
+#nav #contact {
+  font-size: 1.25em;
+  color: #fff;
+  font-weight: 400;
+  text-shadow: 0px 1px 0px #000;
+  text-decoration: none;
+  word-spacing: 2px;
+  outline: none;
 }
