Add mail chimp signup form, some layout fixes

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -22,7 +22,7 @@
 // LAYOUT
 html {
     background: url('../images/pattern1.jpg') repeat #fff;
-    font-family: 'Helvetica Neue';
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 14px;
     padding-bottom: 40px;
 }
@@ -31,6 +31,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-weight: 100;
     letter-spacing: .05em;
+    line-height: 110%;
 }
 
 .container {
