Adding map teaser preview

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -6,6 +6,26 @@
 @background:            #dcdcdc;
 @container-width:       920px;
 
+.teaser {
+  background-color: white;
+  padding: 3px;
+  margin: 3px;
+  float: right;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+
+#teasertext {
+  position: absolute;
+  bottom: 0;
+  background: rgba(255, 255, 255, 0.8);
+  width: 100%;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 1.2em;
+}
+
 // TYPOGRAPHY PRESETS
 
 // none
@@ -221,5 +241,4 @@ px      68    160    252    344    436    */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
 
 
-    
 }
