Walking map update

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -7,13 +7,12 @@
 @container-width:       920px;
 
 .teaser {
-  background-color: white;
   padding: 3px;
   margin: 3px;
   float: right;
   position: absolute;
-  top: 10px;
-  right: 15px;
+  top: 88px;
+  left: 1050px;
 }
 
 #teasertext {
