More responsive 'Start your adventure lead-in' on landing page

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -12,17 +12,15 @@
   float: right;
   position: absolute;
   top: 88px;
-  left: 1050px;
+  width: 100%;
+  min-width:1088px;
 }
 
-#teasertext {
-  position: absolute;
-  bottom: 0;
-  background: rgba(255, 255, 255, 0.8);
-  width: 100%;
-  text-align: center;
-  padding: 6px 0;
-  font-size: 1.2em;
+.teaserhold {
+  display: inline-block;
+  min-width: 552px;
+  width: 75.4%;
+  height: 50px;
 }
 
 // TYPOGRAPHY PRESETS
