Add twitter to contact

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -116,7 +116,7 @@ header {
         padding: 0 20px;
         line-height: 150%
     }
-    #news {
+    #news, #contact {
         ul {
             padding-left: 0;
             li {
