--- a/public/css/map.less
+++ b/public/css/map.less
@@ -24,15 +24,16 @@ body {
   margin: 0;
 }
 
-.map {
+#map {
   width: 100%;
   height: 100%;
-  float: left;
+  position: absolute;
 }
 
 // OVERLAY
 
 #detailview {
+  z-index: 2000;
   position: absolute;
   left: 40px;
   top: 40px;
