Add placeholder background color to photo

--- a/public/css/map.less
+++ b/public/css/map.less
@@ -67,6 +67,7 @@ body {
     .user-select(none);
     width: @detail-width;
     height: @detail-width * 0.46875;
+    background-color: rgba(255, 255, 255, 0.90);
   }
   .info {
     background-color: rgba(255, 255, 255, 0.90);
