Make detail view draggable.

--- a/public/css/map.less
+++ b/public/css/map.less
@@ -54,6 +54,10 @@ body {
     color: white;
     padding: 0 20px;
     overflow: hidden;
+    cursor: grab;
+    cursor: -moz-grab;
+    cursor: -webkit-grab;
+    .user-select(none);
     h2 {
       font-family: @title-font;
       font-size: 24px;
