--- a/public/css/map_new.less
+++ b/public/css/map_new.less
@@ -12,7 +12,19 @@
 // TYPOGRAPHY PRESETS
 
 @import url(http://fonts.googleapis.com/css?family=Leckerli+One);
-@title-font:  'Leckerli One', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+@font-face {
+    font-family: 'futura_mdcn_btmedium';
+    src: url('fonts/futurabt-mediumcondensed-webfont.eot');
+    src: url('fonts/futurabt-mediumcondensed-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/futurabt-mediumcondensed-webfont.woff') format('woff'),
+         url('fonts/futurabt-mediumcondensed-webfont.ttf') format('truetype'),
+         url('fonts/futurabt-mediumcondensed-webfont.svg#futura_mdcn_btmedium') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@title-font:  'futura_mdcn_btmedium', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 
 // MIXINS
 
@@ -54,6 +66,7 @@
       font-size: 24px;
       font-weight: normal;
       line-height: 60px;
+      letter-spacing: 0.1em;
       padding: 0;
       margin: 0;
     }
