main page links to maps, app store coming soon graphic, twitter bird links to twitter. changed url to index_new.html

--- a/public/css/index_new.less
+++ b/public/css/index_new.less
@@ -167,6 +167,10 @@ header {
         text-decoration: none;
         border-bottom: 1px dotted #777;
     }
+    .no-ul {
+        border:none;
+        color:black;
+    }
     .column {
         padding: 0;
         vertical-align: top;
