--- a/public/css/map_new.less
+++ b/public/css/map_new.less
@@ -40,7 +40,7 @@
   z-index: 2000;
   position: absolute;
   left: 40px;
-  top: 40px;
+  top: 80px;
   width: @detail-width;
   overflow: hidden;
   // border-radius: 16px;
@@ -148,4 +148,33 @@
     }
   }
 
+}
+
+nav {
+  height: 40px;
+  position: absolute;
+  top: 20px;
+  left: 40px;
+  z-index: 200;
+  background-color: white;
+  padding-left: 5px;
+  padding-right: 5px;
+  background-color: whiteSmoke;
+
+  a {
+    text-align: center;
+    display: inline-block;
+    height: 40px;
+    width: 50px;
+    background-color:white;
+
+    &:hover, &.active {
+      background-color: whiteSmoke;
+      background-color: rgba(220, 220, 220, 0.90);
+    }
+
+    img {
+      height: 40px;
+    }
+  }
 }
