--- a/public/css/index_new.less
+++ b/public/css/index_new.less
@@ -9,16 +9,31 @@
 
 // TYPOGRAPHY PRESETS
 
+
 @font-face {
-    font-family: 'futuramedium';
-    src: url('fonts/futura-webfont.eot');
-    src: url('fonts/futura-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/futura-webfont.woff') format('woff'),
-         url('fonts/futura-webfont.ttf') format('truetype'),
-         url('fonts/futura-webfont.svg#futuramedium') format('svg');
+    font-family: 'futura_md_btmedium';
+    src: url('fonts/futura_medium-webfont.eot');
+    src: url('fonts/futura_medium-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/futura_medium-webfont.woff') format('woff'),
+         url('fonts/futura_medium-webfont.ttf') format('truetype'),
+         url('fonts/futura_medium-webfont.svg#futura_md_btmedium') format('svg');
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: 'futura_lt_btlight';
+    src: url('fonts/futurabt-light-webfont.eot');
+    src: url('fonts/futurabt-light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/futurabt-light-webfont.woff') format('woff'),
+         url('fonts/futurabt-light-webfont.ttf') format('truetype'),
+         url('fonts/futurabt-light-webfont.svg#futura_lt_btlight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@body-font:'futura_lt_btlight', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+@body-bold:'futura_md_btmedium', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+
 
 // none
 
@@ -38,11 +53,14 @@
 
 html {
     background: url('../img/pattern1.jpg') repeat #fff;
-    font-family: 'futuramedium', sans-serif;    font-size: 14px;
+  //  font-family: 'futuramedium', sans-serif;
+  font-family: @body-font;
+    font-size: 14px;
     padding-bottom: 40px;
 }
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'futuramedium', sans-serif;
+  font-family: @body-bold;
+//    font-family: 'futuramedium', sans-serif;
     text-transform: uppercase;
    // letter-spacing: .05em;
     line-height: 110%;
@@ -81,7 +99,8 @@ a {
     text-align: right;
     padding:1em 0 .25em 0;
     a {
-        font-family: 'futuramedium', sans-serif;
+        //font-family: 'futuramedium', sans-serif;
+  font-family: @body-bold;
         text-transform: uppercase;
         text-decoration: none;
         color:#000;
@@ -182,7 +201,8 @@ header {
             margin:0.5 0;
             text-align: left;
             overflow-x: hidden;
-            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+           // font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: @body-font;
         }
     }
     #news {
