--- a/public/css/map_new.less
+++ b/public/css/map_new.less
@@ -12,6 +12,7 @@
 // TYPOGRAPHY PRESETS
 
 @import url(http://fonts.googleapis.com/css?family=Leckerli+One);
+
 @font-face {
     font-family: 'futura_mdcn_btmedium';
     src: url('fonts/futurabt-mediumcondensed-webfont.eot');
@@ -23,8 +24,43 @@
     font-style: normal;
 
 }
+@font-face {
+    font-family: 'futura_md_btmedium';
+    src: url('fonts/futura_medium-webfont.eot');
+    src: url('fonts/futura_medium-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/futura_medium-webfont.woff') format('woff'),
+         url('fonts/futura_medium-webfont.ttf') format('truetype'),
+         url('fonts/futura_medium-webfont.svg#futura_md_btmedium') format('svg');
+    font-weight: normal;
+    font-style: normal;
 
-@title-font:  'futura_mdcn_btmedium', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+}
+@font-face {
+    font-family: 'futura_ltcn_btlight';
+    src: url('fonts/futura_light_condensed-webfont.eot');
+    src: url('fonts/futura_light_condensed-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/futura_light_condensed-webfont.woff') format('woff'),
+         url('fonts/futura_light_condensed-webfont.ttf') format('truetype'),
+         url('fonts/futura_light_condensed-webfont.svg#futura_ltcn_btlight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+@font-face {
+    font-family: 'futura_lt_btlight';
+    src: url('fonts/futurabt-light-webfont.eot');
+    src: url('fonts/futurabt-light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/futurabt-light-webfont.woff') format('woff'),
+         url('fonts/futurabt-light-webfont.ttf') format('truetype'),
+         url('fonts/futurabt-light-webfont.svg#futura_lt_btlight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@title-font:  'futura_ltcn_btlight', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+@body-font:'futura_lt_btlight', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+@body-bold:'futura_md_btmedium', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 
 // MIXINS
 
@@ -46,7 +82,8 @@
   // border-radius: 16px;
   //.border-top-radius(20px);
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
-  font-family: 'Helvetica Neue Light', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+  //font-family: 'Helvetica Neue Light', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+  font-family: @body-font;
   font-size: 14px;
   // broken
   //.border-bottom-radius(20px);
@@ -55,20 +92,45 @@
     height: 60px;
     background-color: @title-bg;
     color: white;
-    padding: 0 20px;
+    padding: 0;
+  //  width:100%;
     overflow: hidden;
     cursor: grab;
     cursor: -moz-grab;
     cursor: -webkit-grab;
     .user-select(none);
+    
+    #home {
+      float: left;
+      max-height: 40px;
+      margin: 10px;
+    }
     h2 {
+      display: inline;
       font-family: @title-font;
       font-size: 24px;
       font-weight: normal;
       line-height: 60px;
       letter-spacing: 0.1em;
+      max-width: 50%;
       padding: 0;
       margin: 0;
+  //    margin-bottom: 20px;
+      vertical-align: baseline;
+    }
+
+    .routename {
+      text-transform: uppercase;
+      float:right;
+      right:0;
+      font-family: @body-font;
+      font-size: 12px;
+      font-weight: normal;
+      text-align: right;
+      padding: 0;
+      font-size: 12px;
+      max-width: 25%;
+      margin:25px 20px 0 0;
     }
   }
   .photo {
@@ -86,7 +148,8 @@
         width: 50%;
         float: left;
         font-size: 12px;
-        font-weight: bold;
+        font-family: @body-bold;
+        //font-weight: bold;
         padding-top: 20px;
       }
       .icons {
