minor visual fixes, fixed json file for filter errors, better no photo placeholder

--- a/public/css/index.less
+++ b/public/css/index.less
@@ -279,7 +279,20 @@ px      68    160    252    */
 
 // 600px in normal zoom
 @media only screen and (max-width: 600px) {
+.container {
+    margin:0;
+    padding:0;
+    overflow:hidden;
+    width:100%;
+}
 
+
+// #top header {
+//     width:110%;
+//     overflow: hidden;
+//     margin:auto;
+
+// }
 #middle-divider {
     display: none;
 }
@@ -312,7 +325,7 @@ px      68    160    252    344    436    */
 @media only screen and (max-width: 480px) {
 #news_and_updates .column {
     max-width:100%;
-    padding:1%;
+    padding:3%;
     text-align: center;
 }
 
