--- a/public/css/index.less
+++ b/public/css/index.less
@@ -9,7 +9,16 @@
 
 // TYPOGRAPHY PRESETS
 
-
+@font-face {
+    font-family: 'futura_mdcn_btmedium';
+    src: url('fonts/futurabt-mediumcondensed-webfont.eot');
+    src: url('fonts/futurabt-mediumcondensed-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/futurabt-mediumcondensed-webfont.woff') format('woff'),
+         url('fonts/futurabt-mediumcondensed-webfont.ttf') format('truetype'),
+         url('fonts/futurabt-mediumcondensed-webfont.svg#futura_mdcn_btmedium') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 @font-face {
     font-family: 'futura_md_btmedium';
     src: url('fonts/futura_medium-webfont.eot');
@@ -30,10 +39,21 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: 'futura_ltcn_btlight';
+    src: url('fonts/futura_light_condensed-webfont.eot');
+    src: url('fonts/futura_light_condensed-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/futura_light_condensed-webfont.woff') format('woff'),
+         url('fonts/futura_light_condensed-webfont.ttf') format('truetype'),
+         url('fonts/futura_light_condensed-webfont.svg#futura_ltcn_btlight') format('svg');
+    font-weight: normal;
+    font-style: normal;
 
-@body-font:'futura_lt_btlight', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-@body-bold:'futura_md_btmedium', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+}
 
+@body-font: '', 'Helvetica', 'Arial', sans-serif;
+@body-bold:'futura_mdcn_btmedium', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+@title-font:'futura_mdcn_btmedium', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 
 // none
 
@@ -63,7 +83,7 @@ h1, h2, h3, h4, h5, h6 {
 //    font-family: 'futuramedium', sans-serif;
     text-transform: uppercase;
    // letter-spacing: .05em;
-    line-height: 110%;
+   // line-height: 110%;
 }
 a {
     text-decoration: none;
@@ -93,14 +113,34 @@ a {
     text-align: center;
 }
 
+
+#mc_embed_signup{
+    background: transparent;
+    clear:left;
+    font:14px Helvetica,Arial,sans-serif;
+    text-align: center;
+}
+
 #top {
-#nav 
-{   
-    text-align: right;
-    padding:1em 0 .25em 0;
+    .uw-title {
+    font-family: @title-font;
+    font-size: 3em;
+    font-weight: normal;
+    text-align:center;
+  }
+.tagline {
+    font-family: @title-font;
+    font-size: 1em;
+    font-weight: normal;
+    text-align:center;
+  }
+  #nav 
+  {   
+    text-align: center;
+    //padding: 1em 0 .25em 0;
     a {
         //font-family: 'futuramedium', sans-serif;
-  font-family: @body-bold;
+        font-family: @body-bold;
         text-transform: uppercase;
         text-decoration: none;
         color:#000;
@@ -171,6 +211,11 @@ header {
     }
 }
 #about {
+    .howto-img {
+        float:left;
+        max-width:60%;
+        margin: 0 5% 5% 0;
+    }
     header {
         text-align: center;
     }
@@ -226,12 +271,13 @@ header {
         }
     }
     #signup {
-        padding-left: 5%;
-        text-align: left;
-        width:22%;
+        
+     //   padding-left: 5%;
+     //   text-align: left;
+     //   width:22%;
         h2 {
-            padding-top: 1em;
-            line-height: 1.5em;
+            //padding-top: 1em;
+            //line-height: 1.5em;
         }
     }
 }
