--- a/public/css/index.less
+++ b/public/css/index.less
@@ -51,9 +51,11 @@
 
 }
 
-@body-font: '', 'Helvetica', 'Arial', sans-serif;
+@body-font: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 @body-bold:'futura_mdcn_btmedium', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 @title-font:'futura_mdcn_btmedium', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+@title-light:'futura_ltcn_btlight', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+
 
 // none
 
@@ -122,21 +124,25 @@ a {
 }
 
 #top {
-    .uw-title {
-    font-family: @title-font;
-    font-size: 3em;
-    font-weight: normal;
-    text-align:center;
+    .title-div {
+        float:left;
+        display: inline-block;
+        font-family: @title-font;
+        font-size: 2em;
+        font-weight: normal;
   }
 .tagline {
+        display: inline-block;
     font-family: @title-font;
     font-size: 1em;
     font-weight: normal;
-    text-align:center;
+    text-align:left;
   }
   #nav 
-  {   
-    text-align: center;
+  {
+  float:left;   
+    text-align: right;
+    vertical-align: bottom;
     //padding: 1em 0 .25em 0;
     a {
         //font-family: 'futuramedium', sans-serif;
@@ -153,19 +159,25 @@ header {
     position: relative;
      width: 100%;
      max-width: 945px;
-     max-height:357px;
+     max-height:400px;
      img {
         width:100%;
      }
 }
 
-#appimage {
-    float:left;
+#banner-text {
     position:absolute;
-    bottom: 4.5% ;
-    right: 1.7%;
-    width:16%;
-    min-width:100px;
+    top:0;
+    float:left;
+    width:100%;
+    height:100%;
+    text-align: center;
+    vertical-align: middle;
+    h1 {
+    font-family: @title-light;
+        color:#fff;
+        font-size: 2em;
+    }
 }
 }
     #middlestretch, #middlestretch2{
@@ -210,22 +222,24 @@ header {
 
     }
 }
-#about {
+#howto-and-about {
     .howto-img {
-        float:left;
+        display: inline-block;
         max-width:60%;
         margin: 0 5% 5% 0;
     }
-    header {
+    .about {
+        display: inline-block;
+        max-width: 30%;
         text-align: center;
-    }
     p {
-        font-size: 1.2857em;
         padding: 0.25em;
     }
 }
+}
 
 #news_and_updates {
+    margin: 3em 0;
     a {
         color: #777;
         text-decoration: none;
