--- a/public/css/map.less
+++ b/public/css/map.less
@@ -3,6 +3,7 @@
 
 @import "normalize.less";
 @import "preboot.less";
+@import "fonts.less";
 
 // CONSTANTS
 
@@ -10,55 +11,52 @@
 @detail-width:  480px;
 
 // TYPOGRAPHY PRESETS
+// @font-face {
+//     font-family: 'futura_mdcn_btmedium';
+//     src: url('fonts/futurabt-mediumcondensed-webfont.eot');
+//     src: url('fonts/futurabt-mediumcondensed-webfont.eot?#iefix') format('embedded-opentype'),
+//          url('fonts/futurabt-mediumcondensed-webfont.woff') format('woff'),
+//          url('fonts/futurabt-mediumcondensed-webfont.ttf') format('truetype'),
+//          url('fonts/futurabt-mediumcondensed-webfont.svg#futura_mdcn_btmedium') format('svg');
+//     font-weight: normal;
+//     font-style: normal;
+// }
+// @font-face {
+//     font-family: 'futura_md_btmedium';
+//     src: url('fonts/futura_medium-webfont.eot');
+//     src: url('fonts/futura_medium-webfont.eot?#iefix') format('embedded-opentype'),
+//          url('fonts/futura_medium-webfont.woff') format('woff'),
+//          url('fonts/futura_medium-webfont.ttf') format('truetype'),
+//          url('fonts/futura_medium-webfont.svg#futura_md_btmedium') format('svg');
+//     font-weight: normal;
+//     font-style: normal;
+// }
+// @font-face {
+//     font-family: 'futura_ltcn_btlight';
+//     src: url('fonts/futura_light_condensed-webfont.eot');
+//     src: url('fonts/futura_light_condensed-webfont.eot?#iefix') format('embedded-opentype'),
+//          url('fonts/futura_light_condensed-webfont.woff') format('woff'),
+//          url('fonts/futura_light_condensed-webfont.ttf') format('truetype'),
+//          url('fonts/futura_light_condensed-webfont.svg#futura_ltcn_btlight') format('svg');
+//     font-weight: normal;
+//     font-style: normal;
 
-@import url(http://fonts.googleapis.com/css?family=Leckerli+One);
+// }
+// @font-face {
+//     font-family: 'futura_lt_btlight';
+//     src: url('fonts/futurabt-light-webfont.eot');
+//     src: url('fonts/futurabt-light-webfont.eot?#iefix') format('embedded-opentype'),
+//          url('fonts/futurabt-light-webfont.woff') format('woff'),
+//          url('fonts/futurabt-light-webfont.ttf') format('truetype'),
+//          url('fonts/futurabt-light-webfont.svg#futura_lt_btlight') format('svg');
+//     font-weight: normal;
+//     font-style: normal;
 
-@font-face {
-    font-family: 'futura_mdcn_btmedium';
-    src: url('fonts/futurabt-mediumcondensed-webfont.eot');
-    src: url('fonts/futurabt-mediumcondensed-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/futurabt-mediumcondensed-webfont.woff') format('woff'),
-         url('fonts/futurabt-mediumcondensed-webfont.ttf') format('truetype'),
-         url('fonts/futurabt-mediumcondensed-webfont.svg#futura_mdcn_btmedium') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'futura_md_btmedium';
-    src: url('fonts/futura_medium-webfont.eot');
-    src: url('fonts/futura_medium-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/futura_medium-webfont.woff') format('woff'),
-         url('fonts/futura_medium-webfont.ttf') format('truetype'),
-         url('fonts/futura_medium-webfont.svg#futura_md_btmedium') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'futura_ltcn_btlight';
-    src: url('fonts/futura_light_condensed-webfont.eot');
-    src: url('fonts/futura_light_condensed-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/futura_light_condensed-webfont.woff') format('woff'),
-         url('fonts/futura_light_condensed-webfont.ttf') format('truetype'),
-         url('fonts/futura_light_condensed-webfont.svg#futura_ltcn_btlight') format('svg');
-    font-weight: normal;
-    font-style: normal;
+// }
 
-}
-@font-face {
-    font-family: 'futura_lt_btlight';
-    src: url('fonts/futurabt-light-webfont.eot');
-    src: url('fonts/futurabt-light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/futurabt-light-webfont.woff') format('woff'),
-         url('fonts/futurabt-light-webfont.ttf') format('truetype'),
-         url('fonts/futurabt-light-webfont.svg#futura_lt_btlight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@title-font:  'futura_ltcn_btlight', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-@body-font:'futura_lt_btlight', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-@body-bold:'futura_md_btmedium', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+// @title-font:  'futura_ltcn_btlight', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+// @body-font:'futura_lt_btlight', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+// @body-bold:'futura_md_btmedium', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 
 // MIXINS
 
