--- a/public/css/map.less
+++ b/public/css/map.less
@@ -8,51 +8,9 @@
 // CONSTANTS
 
 @title-bg:      #2c2c38;
-@detail-width:  480px;
+@detail-width:  30%;
 
-// TYPOGRAPHY PRESETS
-// @font-face {
-//     font-family: 'futura_mdcn_btmedium';
-//     src: url('fonts/futurabt-mediumcondensed-webfont.eot');
-//     src: url('fonts/futurabt-mediumcondensed-webfont.eot?#iefix') format('embedded-opentype'),
-//          url('fonts/futurabt-mediumcondensed-webfont.woff') format('woff'),
-//          url('fonts/futurabt-mediumcondensed-webfont.ttf') format('truetype'),
-//          url('fonts/futurabt-mediumcondensed-webfont.svg#futura_mdcn_btmedium') format('svg');
-//     font-weight: normal;
-//     font-style: normal;
-// }
-// @font-face {
-//     font-family: 'futura_md_btmedium';
-//     src: url('fonts/futura_medium-webfont.eot');
-//     src: url('fonts/futura_medium-webfont.eot?#iefix') format('embedded-opentype'),
-//          url('fonts/futura_medium-webfont.woff') format('woff'),
-//          url('fonts/futura_medium-webfont.ttf') format('truetype'),
-//          url('fonts/futura_medium-webfont.svg#futura_md_btmedium') format('svg');
-//     font-weight: normal;
-//     font-style: normal;
-// }
-// @font-face {
-//     font-family: 'futura_ltcn_btlight';
-//     src: url('fonts/futura_light_condensed-webfont.eot');
-//     src: url('fonts/futura_light_condensed-webfont.eot?#iefix') format('embedded-opentype'),
-//          url('fonts/futura_light_condensed-webfont.woff') format('woff'),
-//          url('fonts/futura_light_condensed-webfont.ttf') format('truetype'),
-//          url('fonts/futura_light_condensed-webfont.svg#futura_ltcn_btlight') format('svg');
-//     font-weight: normal;
-//     font-style: normal;
 
-// }
-// @font-face {
-//     font-family: 'futura_lt_btlight';
-//     src: url('fonts/futurabt-light-webfont.eot');
-//     src: url('fonts/futurabt-light-webfont.eot?#iefix') format('embedded-opentype'),
-//          url('fonts/futurabt-light-webfont.woff') format('woff'),
-//          url('fonts/futurabt-light-webfont.ttf') format('truetype'),
-//          url('fonts/futurabt-light-webfont.svg#futura_lt_btlight') format('svg');
-//     font-weight: normal;
-//     font-style: normal;
-
-// }
 
 // @title-font:  'futura_ltcn_btlight', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 // @body-font:'futura_lt_btlight', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
@@ -71,9 +29,12 @@
 #detailview {
   z-index: 2000;
   position: absolute;
-  left: 40px;
-  top: 40px;
+  // left: 10px;
+  // top: 10px;
+  margin-top: 10px;
+  margin-left: 10px;
   width: @detail-width;
+  height:80%;
   overflow: hidden;
   // border-radius: 16px;
   //.border-top-radius(20px);
@@ -91,10 +52,10 @@
     padding: 0;
   //  width:100%;
     overflow: hidden;
-    cursor: grab;
-    cursor: -moz-grab;
-    cursor: -webkit-grab;
-    .user-select(none);
+    // cursor: grab;
+    // cursor: -moz-grab;
+    // cursor: -webkit-grab;
+    // .user-select(none);
     
     #home {
       float: left;
@@ -131,13 +92,14 @@
     }
   }
   .photo {
-    .user-select(none);
-    width: @detail-width;
-    height: @detail-width * 0.46875;
+    // .user-select(none);
+    max-width: 100%;
+    height:128px;
     background-color: rgba(58, 58, 63, 0.85);
     text-align: center;
     img {
       max-height: 100%;
+      max-width: 100%;
     }
   }
   .info {
