transition to map in home page works

--- a/public/css/index.less
+++ b/public/css/index.less
@@ -138,9 +138,9 @@ a {
    // clear:both;
    // margin:auto;
     //width:95%;
-    height:600px;
+    height:400px;
    // max-width: 945px;
-    max-height:600px;
+    //max-height:px;
      #map {
     //    float:left;
         width: 100%;
