--- a/public/css/map.less
+++ b/public/css/map.less
@@ -34,7 +34,7 @@
   margin-top: 10px;
   margin-left: 10px;
   width: @detail-width;
-  height:80%;
+  max-height:80%;
   overflow: hidden;
   // border-radius: 16px;
   //.border-top-radius(20px);
